Changed Button Styles. Fixed the navigation glitch. Improved Color in Products Section. | Update #21 |

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                     <span class="heading-primary--sub">Tech Reinvented</span>
                 </h1>
                 <!-- BUTTON SETUP -->
-                <a href="#" class="btn btn--white btn--animated-1">Explore</a>
+               <!-- <a href="#" class="btn btn--white btn--animated-1">Explore</a> -->
+                <!--<a href="#" class="but but-modified">Explore</a>
+                <a href="#" class="but but-modified-2">Explore</a>
+                <a href="#" class="but but-modified-3">Explore</a> -->
+                <a href="#" class="but but-modified-4 header__text-box__button">Explore</a> 
             </div>
         </header>
         <!-- ** HEADER ENDS ** -->
@@ -231,7 +235,7 @@
                                     <div class="card__price-box">
                                         <p class="card__price-value">$1,199</p>
                                     </div>
-                                    <a href="#popup" class="btn btn--white">Pre-Order</a>
+                                    <a href="#" class="but but-modified-4">Pre-Order</a> 
                                 </div>
                             </div>
                         </div>
@@ -264,7 +268,7 @@
                                             <div class="card__price-box">
                                                 <p class="card__price-value">$799</p>
                                             </div>
-                                            <a href="#popup" class="btn btn--white">Pre-Order</a>
+                                            <a href="#" class="but but-modified-4">Pre-Order</a> 
                                     </div>
                             </div>
                         </div>
@@ -297,15 +301,16 @@
                                             <div class="card__price-box">
                                                 <p class="card__price-value">$599</p>
                                             </div>
-                                            <a href="#popup" class="btn btn--white">Pre-Order</a>
+                                            <a href="#" class="but but-modified-4">Pre-Order</a> 
                                     </div>
                             </div>
                         </div>
                     </div>
-                    </div>
-                    <div class="u-center-text u-margin-top-huge">
-                        <a href="#" class="btn btn--green">More</a>
-                    </div>
+                </div>
+                <!-- BUTTON SETUP -->
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="but but-modified-4">More</a> 
+                </div>
             </section>
         <!-- SECTION PRODUCTS EXPERIMENTAL ENDS -->
     </main>
