Added Videos to Games Section. | Made Videos responsive for smaller sizes. Minor Improvements around the Header. Ready For More Improvements. | Update #22 |

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                <!-- <a href="#" class="btn btn--white btn--animated-1">Explore</a> -->
                 <!--<a href="#" class="but but-modified">Explore</a>
                 <a href="#" class="but but-modified-2">Explore</a>
-                <a href="#" class="but but-modified-3">Explore</a> -->
-                <a href="#" class="but but-modified-4 header__text-box__button">Explore</a> 
+                <a href="#" class="but but-modified-3">Explore</a> OTHER STYLES -->
+                <a href="#" class="but but-modified-4 header__text-box__button btn--animated-1">Explore</a>     <!-- .btn--animated-1 IS MANDATORY FOR ANIMATION -->
             </div>
         </header>
         <!-- ** HEADER ENDS ** -->
@@ -155,6 +155,14 @@
 
         <!-- SECTION GAME 1 STARTS -->
         <section class="section-game-1">
+
+            <!-- VIDEO SETUP -->
+            <div class="section-game-1__video">
+                <iframe width="700" height="400"
+                    src="https://www.youtube.com/embed/-FEgeuGsmzQ">
+                </iframe>
+            </div>
+
             <div class="section-game-1__container">
                 <h2 class="heading-secondary u-margin-top-medium section-game-1__heading">Battlefield Will never be the same</h2>
                 <p class="paragraph section-game-1__paragraph">
@@ -171,6 +179,14 @@
 
         <!-- SECTION GAME 2 STARTS -->
         <section class="section-game-2">
+
+            <!-- VIDEO SETUP -->
+            <div class="section-game-2__video">
+                    <iframe width="700" height="400"
+                        src="https://www.youtube.com/embed/XYtyeqVQnRI">
+                    </iframe>
+                </div>
+
             <div class="section-game-2__container">
                 <h2 class="heading-secondary u-margin-top-medium section-game-2__heading">Become The tomb raider</h2>
                 <p class="paragraph section-game-2__paragraph">
@@ -187,6 +203,14 @@
 
         <!-- SECTION GAME 3 STARTS -->
             <section class="section-game-3">
+
+                 <!-- VIDEO SETUP -->
+                <div class="section-game-3__video">
+                    <iframe width="700" height="400"
+                        src="https://www.youtube.com/embed/wx2Irm3ZFz8">
+                    </iframe>
+                </div>
+
                 <div class="section-game-3__container">
                     <h2 class="heading-secondary u-margin-top-medium section-game-3__heading">Flee The shattered ruins of Moscow in metro exodus</h2>
                     <p class="paragraph section-game-3__paragraph">
